apps/blockscout/kustomize/overlays/aws/mainnet/resource_override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blockscout
spec:
  template:
    spec:
      containers:
        - name: app-blockscout
          resources:
            requests:
              cpu: 1
              memory: 1.75Gi
